--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -5,5 +5,4 @@ payload:
   - DOMAIN-SUFFIX,di.fm
   - DOMAIN-SUFFIX,kde.org
   - DOMAIN-SUFFIX,ubuntu.ru
-  - DOMAIN-SUFFIX,guru99.com
-  
+  - DOMAIN-SUFFIX,spotify.com
