--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -12,6 +12,6 @@ payload:
   - DOMAIN-SUFFIX,kde.org
   - DOMAIN-SUFFIX,spotify.com
   - PROCESS-NAME,Discord.exe
-  - PROCESS-PATH-REGEX,.*/com.discordapp.Discord/.*/files/discord/Discord,PROXY
-  - PROCESS-NAME-REGEX,(?i).*discord.*,PROXY
+  - PROCESS-PATH-REGEX,.*/com.discordapp.Discord/.*/files/discord/Discord
+  - PROCESS-NAME-REGEX,(?i).*discord.*
   
