--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -11,5 +11,4 @@ payload:
   - DOMAIN-SUFFIX,udemy.com
   - DOMAIN-SUFFIX,kde.org
   - DOMAIN-SUFFIX,spotify.com
-  - PROCESS-NAME,Discord.exe
-  
+  - PROCESS-NAME-REGEX,(?i).*discord.* 
