--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -14,3 +14,5 @@ payload:
   - PROCESS-NAME-REGEX,(?i).*discord.* 
   - DOMAIN-SUFFIX,wisconsinhistory.org
   - DOMAIN-SUFFIX,promods.net
+  - GEOSITE,promods
+  - GEOSITE,promods.net
