--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -15,3 +15,4 @@ payload:
   - DOMAIN-SUFFIX,wisconsinhistory.org
   - DOMAIN-SUFFIX,promods.net
   - DOMAIN-SUFFIX,whatismyip.com
+  - DOMAIN-SUFFI,deepl.com
