--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -14,3 +14,4 @@ payload:
   - PROCESS-NAME-REGEX,(?i).*discord.* 
   - DOMAIN-SUFFIX,wisconsinhistory.org
   - DOMAIN-SUFFIX,promods.net
+  - DOMAIN-SUFFIX,anonfile.de
