--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -16,3 +16,4 @@ payload:
   - DOMAIN-SUFFIX,promods.net
   - DOMAIN-SUFFIX,anonfile.de
   - DOMAIN-SUFFIX,ranoz.gg
+  - DOMAIN-SUFFIX,desiupload.co
