--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -14,3 +14,4 @@ payload:
   - PROCESS-NAME-REGEX,(?i).*discord.* 
   - DOMAIN-SUFFIX,anonfile.de
   - DOMAIN-SUFFIX,ranoz.gg
+  - DOMAIN-SUFFIX,steamdb.info
