--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -13,6 +13,7 @@ payload:
   - DOMAIN-SUFFIX,spotify.com
   - PROCESS-NAME-REGEX,(?i).*discord.* 
   - PROCESS-NAME-REGEX,(?i).*StarCitizen.* 
+  - PROCESS-NAME-REGEX,(?i).*sekiro.* 
   - DOMAIN-SUFFIX,anonfile.de
   - DOMAIN-SUFFIX,ranoz.gg
   - DOMAIN-SUFFIX,steamdb.info
