--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -15,4 +15,5 @@ payload:
   - DOMAIN-SUFFIX,anonfile.de
   - DOMAIN-SUFFIX,ranoz.gg
   - DOMAIN-SUFFIX,steamdb.info
+  - DOMAIN-SUFFIX,nexusmods.com
   - GEOSITE,deepl
