--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -2,3 +2,4 @@ payload:
   - PROCESS-NAME,sekiro.exe
   - DOMAIN-SUFFIX,browserleaks.com
   - DOMAIN-SUFFIX,dnsleaktest.com
+  - DOMAIN-SUFFIX,fromsoftware.jp
