--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -3,3 +3,4 @@ payload:
   - DOMAIN-SUFFIX,browserleaks.com
   - DOMAIN-SUFFIX,dnsleaktest.com
   - DOMAIN-SUFFIX,fromsoftware.jp
+  - DOMAIN-SUFFIX,uploadflix.cc
