--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -4,3 +4,4 @@ payload:
   - DOMAIN-SUFFIX,dnsleaktest.com
   - DOMAIN-SUFFIX,fromsoftware.jp
   - DOMAIN-SUFFIX,uploadflix.cc
+  - DOMAIN-SUFFIX,gofile.io
