--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -11,3 +11,4 @@ payload:
   - DOMAIN-SUFFIX,ocbase.com
   - DOMAIN-SUFFIX,xpg.com
   - PROCESS-NAME-REGEX,XPG-Prime.exe
+- DOMAIN-SUFFIX,asrock.com
