--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -12,3 +12,4 @@ payload:
   - DOMAIN-SUFFIX,xpg.com
   - PROCESS-NAME-REGEX,XPG-Prime.exe
   - DOMAIN-SUFFIX,asrock.com
+  - DOMAIN-SUFFIX,ugreen.com
