--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -5,6 +5,7 @@ payload:
   - DOMAIN-SUFFIX,dnsleaktest.com
   - DOMAIN-SUFFIX,uploadflix.cc
   - DOMAIN-SUFFIX,gofile.io
+  - DOMAIN-SUFFIX,anonfile.de
   - DOMAIN-SUFFIX,mtcc.mv
   - DOMAIN-SUFFIX,rtl.mv
   - PROCESS-NAME-REGEX,(?i).*whatsapp.*
