--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -15,4 +15,4 @@ payload:
   - DOMAIN-SUFFIX,asrock.com
   - DOMAIN-SUFFIX,ugreen.com
   - DOMAIN-SUFFIX,asus.com
-  - DOMAIN-SUFFIX,iw4.at
+  - DOMAIN-SUFFIX,msi.com
