--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -17,3 +17,4 @@ payload:
   - DOMAIN-SUFFIX,asus.com
   - DOMAIN-SUFFIX,msi.com
   - DOMAIN-SUFFIX,gigabyte.com
+  - DOMAIN-SUFFIX,civiccomputing.com
