--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -18,4 +18,4 @@ payload:
   - DOMAIN-SUFFIX,msi.com
   - DOMAIN-SUFFIX,gigabyte.com
   - DOMAIN-SUFFIX,civiccomputing.com
-  - DOMAIN-SUFFIX,lian-li.com/
+  - DOMAIN-SUFFIX,lian-li.com
