--- a/romarus-proxy.yaml
+++ b/romarus-proxy.yaml
@@ -1,5 +1,6 @@
 payload:
   - PROCESS-NAME,firefox.real
+  - PROCESS-NAME,tor
   - PROCESS-NAME,sekiro.exe
   - DOMAIN-SUFFIX,fromsoftware.jp
   - DOMAIN-SUFFIX,browserleaks.com
