--- a/romarus-direct.yaml
+++ b/romarus-direct.yaml
@@ -1,2 +1,5 @@
 payload:
   - DOMAIN-SUFFIX,steampowered.com
+  - DOMAIN-SUFFIX,truenetwork.ru
+  - DOMAIN-SUFFIX,debian.org
+  - DOMAIN-SUFFIX,flathub.org
